# move-model-ast-parsing

./: Cargo.toml  ast.json  ast_basic_full.json  ast_summary.json
src/: basic_full.rs  main.rs  summary.rs
