[package]
name = "move_ast_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1.1.2"
codespan-reporting = "0.11.1"

# Pull Move crates straight from Aptos (main) or your own fork.
move-model = { path = "../aptos-core/third_party/move/move-model" }
move-compiler-v2 = { path = "../aptos-core/third_party/move/move-compiler-v2" }
move-package       = { path = "../aptos-core/third_party/move/tools/move-package" }
